fix sticky table headers overlapping header bar dropdowns

--- a/resources/assets/sass/_style.scss
+++ b/resources/assets/sass/_style.scss
@@ -18,6 +18,10 @@ body, #app {
     display: none !important;
 }
 
+.overlay-all {
+    z-index: 2000;
+}
+
 .drag-container:empty {
     height: 100%;
     width: 100%;
